==> TAKETODAY/self-balancing-robot/src/foc/drivers/hardware_specific/stm32/stm32_mcu.cpp <==
#include "../../hardware_api.h"
#include "./stm32_mcu.h"
#include "./stm32_timerutils.h"
#include "./stm32_searchtimers.h"

void* _configure3PWM(long pwm_frequency, const int pinA, const int pinB, const int pinC) {
  if (numMotorsUsed + 1 > SIMPLEFOC_STM32_MAX_MOTORSUSED) {
    SIMPLEFOC_DEBUG("STM32-DRV: ERR: too many drivers used");
    return (STM32DriverParams*) SIMPLEFOC_DRIVER_INIT_FAILED;
  }
  if (!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = SIMPLEFOC_STM32_PWM_FREQUENCY; // default frequency 25khz

  int pins[3] = { pinA, pinB, pinC };
  PinMap* pinTimers[3] = { NULL, NULL, NULL };
  if (stm32_findBestTimerCombination(3, pins, pinTimers) < 0)
    return (STM32DriverParams*) SIMPLEFOC_DRIVER_INIT_FAILED;

  TIM_HandleTypeDef* HT1 = stm32_initPinPWM(pwm_frequency, pinTimers[0], TIM_OCMODE_PWM1, (SIMPLEFOC_PWM_ACTIVE_HIGH) ? TIM_OCPOLARITY_HIGH : TIM_OCPOLARITY_LOW);
  TIM_HandleTypeDef* HT2 = stm32_initPinPWM(pwm_frequency, pinTimers[1], TIM_OCMODE_PWM1, (SIMPLEFOC_PWM_ACTIVE_HIGH) ? TIM_OCPOLARITY_HIGH : TIM_OCPOLARITY_LOW);
  TIM_HandleTypeDef* HT3 = stm32_initPinPWM(pwm_frequency, pinTimers[2], TIM_OCMODE_PWM1, (SIMPLEFOC_PWM_ACTIVE_HIGH) ? TIM_OCPOLARITY_HIGH : TIM_OCPOLARITY_LOW);

  TIM_HandleTypeDef* timers[3] = { HT1, HT2, HT3 };
  stm32_checkTimerFrequency(pwm_frequency, timers, 3);

  uint32_t channel1 = STM_PIN_CHANNEL(pinTimers[0]->function);
  uint32_t channel2 = STM_PIN_CHANNEL(pinTimers[1]->function);
  uint32_t channel3 = STM_PIN_CHANNEL(pinTimers[2]->function);

  STM32DriverParams* params = new STM32DriverParams{
    .timers_handle = { HT1, HT2, HT3 },
    .channels = { channel1, channel2, channel3 },
    .llchannels = { stm32_getLLChannel(pinTimers[0]), stm32_getLLChannel(pinTimers[1]), stm32_getLLChannel(pinTimers[2]) },
    .pwm_frequency = pwm_frequency,
    .num_timers = stm32_countTimers(timers, 3),
    .master_timer = NULL
  };
  params->master_timer = stm32_alignTimers(timers, 3);
  motorsUsed[numMotorsUsed++] = params;
  return params;
}

void* _configure4PWM(long pwm_frequency, const int pinA, const int pinB, const int pinC, const int pinD) {
  if (numMotorsUsed + 1 > SIMPLEFOC_STM32_MAX_MOTORSUSED) {
    SIMPLEFOC_DEBUG("STM32-DRV: ERR: too many drivers used");
    return (STM32DriverParams*) SIMPLEFOC_DRIVER_INIT_FAILED;
  }
  if (!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = SIMPLEFOC_STM32_PWM_FREQUENCY; // default frequency 25khz

  int pins[4] = { pinA, pinB, pinC, pinD };
  PinMap* pinTimers[4] = { NULL, NULL, NULL, NULL };
  if (stm32_findBestTimerCombination(4, pins, pinTimers) < 0)
    return (STM32DriverParams*) SIMPLEFOC_DRIVER_INIT_FAILED;

  TIM_HandleTypeDef* HT1 = stm32_initPinPWM(pwm_frequency, pinTimers[0], TIM_OCMODE_PWM1, (SIMPLEFOC_PWM_ACTIVE_HIGH) ? TIM_OCPOLARITY_HIGH : TIM_OCPOLARITY_LOW);
  TIM_HandleTypeDef* HT2 = stm32_initPinPWM(pwm_frequency, pinTimers[1], TIM_OCMODE_PWM1, (SIMPLEFOC_PWM_ACTIVE_HIGH) ? TIM_OCPOLARITY_HIGH : TIM_OCPOLARITY_LOW);
  TIM_HandleTypeDef* HT3 = stm32_initPinPWM(pwm_frequency, pinTimers[2], TIM_OCMODE_PWM1, (SIMPLEFOC_PWM_ACTIVE_HIGH) ? TIM_OCPOLARITY_HIGH : TIM_OCPOLARITY_LOW);
  TIM_HandleTypeDef* HT4 = stm32_initPinPWM(pwm_frequency, pinTimers[3], TIM_OCMODE_PWM1, (SIMPLEFOC_PWM_ACTIVE_HIGH) ? TIM_OCPOLARITY_HIGH : TIM_OCPOLARITY_LOW);
  TIM_HandleTypeDef* timers[4] = { HT1, HT2, HT3, HT4 };
  stm32_checkTimerFrequency(pwm_frequency, timers, 4);

  uint32_t channel1 = STM_PIN_CHANNEL(pinTimers[0]->function);
  uint32_t channel2 = STM_PIN_CHANNEL(pinTimers[1]->function);
  uint32_t channel3 = STM_PIN_CHANNEL(pinTimers[2]->function);
  uint32_t channel4 = STM_PIN_CHANNEL(pinTimers[3]->function);

  STM32DriverParams* params = new STM32DriverParams{
    .timers_handle = { HT1, HT2, HT3, HT4 },
    .channels = { channel1, channel2, channel3, channel4 },
    .llchannels = { stm32_getLLChannel(pinTimers[0]), stm32_getLLChannel(pinTimers[1]), stm32_getLLChannel(pinTimers[2]), stm32_getLLChannel(pinTimers[3]) },
    .pwm_frequency = pwm_frequency,
    .num_timers = stm32_countTimers(timers, 4),
    .master_timer = NULL
  };
  params->master_timer = stm32_alignTimers(timers, 4);
  motorsUsed[numMotorsUsed++] = params;
  return params;
}

void _writeDutyCycle3PWM(float dc_a, float dc_b, float dc_c, void* params) {
  uint32_t duty1 = dc_a * (((STM32DriverParams*) params)->timers_handle[0]->Instance->ARR + 1);
  uint32_t duty2 = dc_b * (((STM32DriverParams*) params)->timers_handle[1]->Instance->ARR + 1);
  uint32_t duty3 = dc_c * (((STM32DriverParams*) params)->timers_handle[2]->Instance->ARR + 1);
  if (((STM32DriverParams*) params)->num_timers == 1) LL_TIM_DisableUpdateEvent(((STM32DriverParams*) params)->timers_handle[0]->Instance);
  stm32_setPwm(((STM32DriverParams*) params)->timers_handle[0], ((STM32DriverParams*) params)->channels[0], duty1);
  stm32_setPwm(((STM32DriverParams*) params)->timers_handle[1], ((STM32DriverParams*) params)->channels[1], duty2);
  stm32_setPwm(((STM32DriverParams*) params)->timers_handle[2], ((STM32DriverParams*) params)->channels[2], duty3);
  if (((STM32DriverParams*) params)->num_timers == 1) LL_TIM_EnableUpdateEvent(((STM32DriverParams*) params)->timers_handle[0]->Instance);
}

void _writeDutyCycle4PWM(float dc_1a, float dc_1b, float dc_2a, float dc_2b, void* params) {
  uint32_t duty1 = dc_1a * (((STM32DriverParams*) params)->timers_handle[0]->Instance->ARR + 1);
  uint32_t duty2 = dc_1b * (((STM32DriverParams*) params)->timers_handle[1]->Instance->ARR + 1);
  uint32_t duty3 = dc_2a * (((STM32DriverParams*) params)->timers_handle[2]->Instance->ARR + 1);
  uint32_t duty4 = dc_2b * (((STM32DriverParams*) params)->timers_handle[3]->Instance->ARR + 1);
  if (((STM32DriverParams*) params)->num_timers == 1) LL_TIM_DisableUpdateEvent(((STM32DriverParams*) params)->timers_handle[0]->Instance);
  stm32_setPwm(((STM32DriverParams*) params)->timers_handle[0], ((STM32DriverParams*) params)->channels[0], duty1);
  stm32_setPwm(((STM32DriverParams*) params)->timers_handle[1], ((STM32DriverParams*) params)->channels[1], duty2);
  stm32_setPwm(((STM32DriverParams*) params)->timers_handle[2], ((STM32DriverParams*) params)->channels[2], duty3);
  stm32_setPwm(((STM32DriverParams*) params)->timers_handle[3], ((STM32DriverParams*) params)->channels[3], duty4);
  if (((STM32DriverParams*) params)->num_timers == 1) LL_TIM_EnableUpdateEvent(((STM32DriverParams*) params)->timers_handle[0]->Instance);
}

void* _configure6PWM(long pwm_frequency, float dead_zone, const int pinA_h, const int pinA_l, const int pinB_h, const int pinB_l, const int pinC_h, const int pinC_l) {
  if (numMotorsUsed + 1 > SIMPLEFOC_STM32_MAX_MOTORSUSED) {
    SIMPLEFOC_DEBUG("STM32-DRV: ERR: too many drivers used");
    return (STM32DriverParams*) SIMPLEFOC_DRIVER_INIT_FAILED;
  }
  if (!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = SIMPLEFOC_STM32_PWM_FREQUENCY; // default frequency 25khz

  // find configuration
  int pins[6] = { pinA_h, pinA_l, pinB_h, pinB_l, pinC_h, pinC_l };
  PinMap* pinTimers[6] = { NULL, NULL, NULL, NULL, NULL, NULL };
  int score = stm32_findBestTimerCombination(6, pins, pinTimers);

  STM32DriverParams* params;
  // configure accordingly
  if (score < 0)
    params = (STM32DriverParams*) SIMPLEFOC_DRIVER_INIT_FAILED;
  else if (score < 10) // hardware pwm
    params = _stm32_initHardware6PWMInterface(pwm_frequency, dead_zone, pinTimers[0], pinTimers[1], pinTimers[2], pinTimers[3], pinTimers[4], pinTimers[5]);
  else {
    // software pwm
    TIM_HandleTypeDef* HT1 = _stm32_initPinPWMHigh(pwm_frequency, pinTimers[0]);
    TIM_HandleTypeDef* HT2 = _stm32_initPinPWMLow(pwm_frequency, pinTimers[1]);
    TIM_HandleTypeDef* HT3 = _stm32_initPinPWMHigh(pwm_frequency, pinTimers[2]);
    TIM_HandleTypeDef* HT4 = _stm32_initPinPWMLow(pwm_frequency, pinTimers[3]);
    TIM_HandleTypeDef* HT5 = _stm32_initPinPWMHigh(pwm_frequency, pinTimers[4]);
    TIM_HandleTypeDef* HT6 = _stm32_initPinPWMLow(pwm_frequency, pinTimers[5]);
    TIM_HandleTypeDef* timers[6] = { HT1, HT2, HT3, HT4, HT5, HT6 };
    stm32_checkTimerFrequency(pwm_frequency, timers, 6);
    uint32_t channel1 = STM_PIN_CHANNEL(pinTimers[0]->function);
    uint32_t channel2 = STM_PIN_CHANNEL(pinTimers[1]->function);
    uint32_t channel3 = STM_PIN_CHANNEL(pinTimers[2]->function);
    uint32_t channel4 = STM_PIN_CHANNEL(pinTimers[3]->function);
    uint32_t channel5 = STM_PIN_CHANNEL(pinTimers[4]->function);
    uint32_t channel6 = STM_PIN_CHANNEL(pinTimers[5]->function);
    params = new STM32DriverParams{
      .timers_handle = { HT1, HT2, HT3, HT4, HT5, HT6 },
      .channels = { channel1, channel2, channel3, channel4, channel5, channel6 },
      .llchannels = {
        stm32_getLLChannel(pinTimers[0]), stm32_getLLChannel(pinTimers[1]), stm32_getLLChannel(pinTimers[2]), stm32_getLLChannel(pinTimers[3]), stm32_getLLChannel(pinTimers[4]),
        stm32_getLLChannel(pinTimers[5])
      },
      .pwm_frequency = pwm_frequency,
      .num_timers = stm32_countTimers(timers, 6),
      .master_timer = NULL,
      .dead_zone = dead_zone,
      .interface_type = _SOFTWARE_6PWM
    };
  }
  if (score >= 0) {
    params->master_timer = stm32_alignTimers(params->timers_handle, 6);
    motorsUsed[numMotorsUsed++] = params;
  }
  return params; // success
}

void _writeDutyCycle6PWM(float dc_a, float dc_b, float dc_c, PhaseState* phase_state, void* params) {
  uint32_t duty1;
  uint32_t duty2;
  uint32_t duty3;
  switch (((STM32DriverParams*) params)->interface_type) {
    case _HARDWARE_6PWM:
      duty1 = dc_a * (((STM32DriverParams*) params)->timers_handle[0]->Instance->ARR + 1);
      duty2 = dc_b * (((STM32DriverParams*) params)->timers_handle[2]->Instance->ARR + 1);
      duty3 = dc_c * (((STM32DriverParams*) params)->timers_handle[4]->Instance->ARR + 1);
      if (phase_state[0] == PhaseState::PHASE_OFF) duty1 = 0;
      if (phase_state[1] == PhaseState::PHASE_OFF) duty2 = 0;
      if (phase_state[2] == PhaseState::PHASE_OFF) duty3 = 0;
      if (((STM32DriverParams*) params)->num_timers == 1) LL_TIM_DisableUpdateEvent(((STM32DriverParams*) params)->timers_handle[0]->Instance);
      _setSinglePhaseState(phase_state[0], ((STM32DriverParams*) params)->timers_handle[0], ((STM32DriverParams*) params)->llchannels[0], ((STM32DriverParams*) params)->llchannels[1]);
      stm32_setPwm(((STM32DriverParams*) params)->timers_handle[0], ((STM32DriverParams*) params)->channels[0], duty1);
      _setSinglePhaseState(phase_state[1], ((STM32DriverParams*) params)->timers_handle[2], ((STM32DriverParams*) params)->llchannels[2], ((STM32DriverParams*) params)->llchannels[3]);
      stm32_setPwm(((STM32DriverParams*) params)->timers_handle[2], ((STM32DriverParams*) params)->channels[2], duty2);
      _setSinglePhaseState(phase_state[2], ((STM32DriverParams*) params)->timers_handle[4], ((STM32DriverParams*) params)->llchannels[4], ((STM32DriverParams*) params)->llchannels[5]);
      stm32_setPwm(((STM32DriverParams*) params)->timers_handle[4], ((STM32DriverParams*) params)->channels[4], duty3);
      if (((STM32DriverParams*) params)->num_timers == 1) LL_TIM_EnableUpdateEvent(((STM32DriverParams*) params)->timers_handle[0]->Instance);
      break;
    case _SOFTWARE_6PWM:
      float dead_zone = ((STM32DriverParams*) params)->dead_zone / 2.0f;
      duty1 = _constrain(dc_a - dead_zone, 0.0f, 1.0f) * (((STM32DriverParams*) params)->timers_handle[0]->Instance->ARR + 1);
      duty2 = _constrain(dc_b - dead_zone, 0.0f, 1.0f) * (((STM32DriverParams*) params)->timers_handle[2]->Instance->ARR + 1);
      duty3 = _constrain(dc_c - dead_zone, 0.0f, 1.0f) * (((STM32DriverParams*) params)->timers_handle[4]->Instance->ARR + 1);
      uint32_t duty1N = _constrain(dc_a + dead_zone, 0.0f, 1.0f) * (((STM32DriverParams*) params)->timers_handle[1]->Instance->ARR + 1);
      uint32_t duty2N = _constrain(dc_b + dead_zone, 0.0f, 1.0f) * (((STM32DriverParams*) params)->timers_handle[3]->Instance->ARR + 1);
      uint32_t duty3N = _constrain(dc_c + dead_zone, 0.0f, 1.0f) * (((STM32DriverParams*) params)->timers_handle[5]->Instance->ARR + 1);

      LL_TIM_DisableUpdateEvent(((STM32DriverParams*) params)->timers_handle[0]->Instance); // timers for high and low side assumed to be the same timer
      if (phase_state[0] == PhaseState::PHASE_ON || phase_state[0] == PhaseState::PHASE_HI)
        stm32_setPwm(((STM32DriverParams*) params)->timers_handle[0], ((STM32DriverParams*) params)->channels[0], duty1);
      else
        stm32_setPwm(((STM32DriverParams*) params)->timers_handle[0], ((STM32DriverParams*) params)->channels[0], 0);
      if (phase_state[0] == PhaseState::PHASE_ON || phase_state[0] == PhaseState::PHASE_LO)
        stm32_setPwm(((STM32DriverParams*) params)->timers_handle[1], ((STM32DriverParams*) params)->channels[1], duty1N);
      else
        stm32_setPwm(((STM32DriverParams*) params)->timers_handle[1], ((STM32DriverParams*) params)->channels[1], 0);

      LL_TIM_DisableUpdateEvent(((STM32DriverParams*) params)->timers_handle[2]->Instance); // timers for high and low side assumed to be the same timer
      if (phase_state[1] == PhaseState::PHASE_ON || phase_state[1] == PhaseState::PHASE_HI)
        stm32_setPwm(((STM32DriverParams*) params)->timers_handle[2], ((STM32DriverParams*) params)->channels[2], duty2);
      else
        stm32_setPwm(((STM32DriverParams*) params)->timers_handle[2], ((STM32DriverParams*) params)->channels[2], 0);
      if (phase_state[1] == PhaseState::PHASE_ON || phase_state[1] == PhaseState::PHASE_LO)
        stm32_setPwm(((STM32DriverParams*) params)->timers_handle[3], ((STM32DriverParams*) params)->channels[3], duty2N);
      else
        stm32_setPwm(((STM32DriverParams*) params)->timers_handle[3], ((STM32DriverParams*) params)->channels[3], 0);

      LL_TIM_DisableUpdateEvent(((STM32DriverParams*) params)->timers_handle[4]->Instance); // timers for high and low side assumed to be the same timer
      if (phase_state[2] == PhaseState::PHASE_ON || phase_state[2] == PhaseState::PHASE_HI)
        stm32_setPwm(((STM32DriverParams*) params)->timers_handle[4], ((STM32DriverParams*) params)->channels[4], duty3);
      else
        stm32_setPwm(((STM32DriverParams*) params)->timers_handle[4], ((STM32DriverParams*) params)->channels[4], 0);
      if (phase_state[2] == PhaseState::PHASE_ON || phase_state[2] == PhaseState::PHASE_LO)
        stm32_setPwm(((STM32DriverParams*) params)->timers_handle[5], ((STM32DriverParams*) params)->channels[5], duty3N);
      else
        stm32_setPwm(((STM32DriverParams*) params)->timers_handle[5], ((STM32DriverParams*) params)->channels[5], 0);

      LL_TIM_EnableUpdateEvent(((STM32DriverParams*) params)->timers_handle[0]->Instance);
      LL_TIM_EnableUpdateEvent(((STM32DriverParams*) params)->timers_handle[2]->Instance);
      LL_TIM_EnableUpdateEvent(((STM32DriverParams*) params)->timers_handle[4]->Instance);
      break;
  }
}
